# minimax-cli

./: .env.example  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.sisyphus/: ralph-loop.local.md
src/: cli.rs  config.rs  config_file.rs  keyring.rs  lib.rs  main.rs
src/commands/: config.rs  download_task.rs  generate_video.rs  list_tasks.rs  list_voices.rs  mod.rs  music_generation.rs  query_task.rs  text_to_audio.rs  text_to_image.rs  voice_clone.rs  voice_design.rs
src/core/: api_client.rs  db.rs  errors.rs  mod.rs  models.rs
