[package]
name = "minimax-cli"
version = "0.1.0"
edition = "2021"
authors = ["MiniMax"]
description = "CLI for MiniMax AI APIs (text-to-speech, video, image, music generation)"
license = "MIT"
repository = "https://github.com/MiniMax-AI/MiniMax-CLI"
rust-version = "1.70"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async HTTP
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
anyhow = "1.0"
dirs = "5.0"
hex = "0.4"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "minimax"
path = "src/main.rs"
